test/spec_vectors/i32/fail/module_22.wat
(module (func $type-binary-2nd-operand-empty-in-block (i32.const 0) (block (i32.const 0) (i32.add) (drop))))